# VinylRecorder

./: .gitignore  README.md  app.js  index.html  styles.css
outdated/: app.js
recordTracker/: Cargo.toml  sqlite-old.db  sqlite.db  sqlite.db-shm  sqlite.db-wal
recordTracker/src/: main.rs
recordTracker/src/static/: index.html
record_tracker_backend/: Cargo.toml  db.sqlite  diesel.toml
record_tracker_backend/migrations/2025-02-25-221932_create_albums/: up.sql
record_tracker_backend/src/: main.rs  models.rs  schema.rs
