[package]
name = "record_tracker_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde_json = "1.0"
dotenvy = "0.15"
r2d2 = "0.8"
diesel = { version = "2.0", features = ["sqlite", "r2d2"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

